[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.13.0"
axum = "0.6.12"
shuttle-axum = "0.13.0"
tokio = "1.27.0"
axum-extra = { version = "0.7.2", features = ["cookie-private"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono"] }
shuttle-shared-db = { version = "0.13.0", features = ["postgres"] }
shuttle-secrets = "0.13.0"
lettre = "0.10.4"
time = "0.3.20"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde", "clock"] }
bcrypt = "0.14.0"
